# kindle-clippings-manager

./: .gitignore  README.md  pyproject.toml
src/cli/: main.py  main_external_csv.py
src/kindle/: exporters.py  models.py  parsers.py  processor.py
src/utils/: text_utils.py
tests/integration/: test_end_to_end.py
tests/unit/: test_exporters.py  test_is_overlap.py  test_models.py  test_overlaps.py  test_parsers.py  test_processor.py  test_remove_duplicates.py  test_text_utils.py
